--- a/front-end/src/index.html
+++ b/front-end/src/index.html
@@ -19,6 +19,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Tapestry&display=swap" rel="stylesheet">
   <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet"> -->
+  <script
+  src="https://www.paypal.com/sdk/js?client-id=AekvrTlBusNljjUiec_bsow7tXhSdj7PVbbaHcAUQTwqK7VtFuG3xdHdobqaL2AGMWQq4aqBkqT8gC23"></script>
+
 </head>
 <body class="mat-typography">
   <app-root></app-root>
